<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activities.TerminalInfoActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/terminal_info_layout"
        android:padding="10dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_margin="6dp"
            android:padding="6dp"
            android:textColor="@color/black"
            android:text="@string/device_details">

        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:padding="6dp"
            android:background="@drawable/all_corner_bg_shape"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:id="@+id/firmware_version_tv"
                android:text="@string/firmware_version"
                android:visibility="visible"
                >
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:id="@+id/battery_status_tv"
                android:text="@string/firmware_version"
                android:visibility="visible"
                >
            </TextView>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_margin="6dp"
            android:padding="6dp"
            android:textColor="@color/black"
            android:text="@string/firmware_details">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:padding="6dp"
            android:background="@drawable/all_corner_bg_shape"
            android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:id="@+id/application_details_tv"
            android:text="@string/firmware_version"
            android:visibility="visible"
            >
        </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:id="@+id/terminal_details_tv"
            android:text="@string/firmware_version"
            android:visibility="visible"
            >
        </TextView>

    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_margin="6dp"
            android:padding="6dp"
            android:textColor="@color/black"
            android:text="@string/application_details">
        </TextView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:padding="6dp"
            android:background="@drawable/all_corner_bg_shape"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:id="@+id/imie_one_tv"
                android:text="@string/firmware_version"
                android:visibility="visible"
                >
            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:id="@+id/manufacturer_tv"
                android:text="@string/firmware_version"
                android:visibility="visible"
                >
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:id="@+id/application_name_tv"
                android:text="@string/firmware_version"
                android:visibility="visible"
                >
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:id="@+id/application_version_tv"
                android:text="@string/firmware_version"
                android:visibility="visible"
                >
            </TextView>

        </LinearLayout>
    </LinearLayout>


    </ScrollView>

</LinearLayout>