<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/parent_root_view"
    android:keepScreenOn="true"
    android:background="@drawable/background_gradient"
    tools:context=".view.activities.PrintActivity">

    <include layout="@layout/toolbar" />

<FrameLayout
    android:layout_width="match_parent"
    android:id="@+id/main_frame_layout"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:id="@+id/fram_card_view"
        android:visibility="gone">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/all_button_border_shape"
            android:orientation="vertical"
            android:paddingTop="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:weightSum="6">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/card_name_show"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:padding="12sp"/>
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:layout_alignParentRight="true"
                        android:foregroundGravity="right"
                        android:background="@color/white"
                        android:src="@drawable/check" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:id="@+id/txt_account_no"
                        android:padding="10dp"
                        android:text="1234 **** **** 1111"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_marginBottom="30dp">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:id="@+id/cashback_amount"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:id="@+id/txt_purchasr_cash"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:id="@+id/txt_purchasr_cash_ar"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_cashback"
                        android:textSize="12dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_cashback_ar"
                        android:textSize="12dp"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:layout_gravity="right"
                        android:gravity="right"
                        android:text="@string/expires" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:layout_gravity="right"
                        android:gravity="right"
                        android:textColor="@color/black"
                        android:id="@+id/txt_expiry_date"
                        android:text="@string/expiry_date" />

                </LinearLayout>
            </FrameLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:background="@drawable/btn_green_rounded_img"
            android:orientation="vertical"
            android:padding="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 122.23"
                android:id="@+id/etd_number_"
                android:textColor="@color/white"
                android:textSize="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 122.23"
                android:id="@+id/etd_number_ar_"
                android:textColor="@color/white"
                android:textSize="25dp" />

        </LinearLayout>

    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:id="@+id/listner_view">
    <include layout="@layout/card_listner_screen" />
    </FrameLayout>
</FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:id="@+id/reversal_layout"
        android:visibility="gone"
        android:padding="30dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/txt_color"
            android:textSize="20sp"
            android:padding="6dp"
            android:id="@+id/txn_type_tv"
            android:text="@string/being_reversed"
            ></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="6dp"
            android:visibility="invisible"
            android:text="@string/being_reversed"
            ></TextView>
    </LinearLayout>


</LinearLayout>